[package]
name = "lua-plugin-manager"
version = "0.1.0"
edition = "2021"
authors = ["Kurt <kurt@reload.co.za>"]
description = "A simple Lua Plugin Management system on top of Mlua"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plugin_lua"

[dependencies]
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
